initial canvas manipulation

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="wrapper">
-
+        <canvas id="snake-board" class="board" width="500" height="500"></canvas>
     </div>
   </body>
 </html>
