added simple game over screen and restart functionality

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <div class="wrapper">
-        <canvas id="snake-board" class="board" width="500" height="500"></canvas>
+      <canvas id="snake-board" class="board" width="500" height="500"></canvas>
+        <div class="restart-overlay">
+          <span>GAME OVER!</span>
+          <button class="restart-btn">Restart Game</button>
+        </div>
     </div>
   </body>
 </html>
